--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    implementation project(":shared-lib")
+
 }
 
 
